gateway/06-route-rhbk.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sso-gateway-rhbk
  namespace: sso-gateway
  labels:
    app: sso-gateway
    app.kubernetes.io/part-of: sso-migration
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  host: rhbk-rhbk.apps.cluster-nf2q4.dynamic2.redhatworkshops.io
  to:
    kind: Service
    name: sso-gateway
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
